--- a/styles/scss/styles.scss
+++ b/styles/scss/styles.scss
@@ -1349,8 +1349,9 @@ select.form-control {
 
 /* AUTH PAGES */
 .auth-page {
-  min-height: calc(100vh - 70px);
+  // min-height: calc(100vh - 70px);
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   padding: 1.5rem 1rem;
