--- a/styles/scss/_base.scss
+++ b/styles/scss/_base.scss
@@ -120,3 +120,12 @@ main {
   min-height: calc(100vh - #{$header-height});
 }
 
+.img-thumbnail {
+  padding: 0.25rem;
+  background-color: var(--bs-body-bg);
+  border: var(--bs-border-width) solid var(--bs-border-color);
+  border-radius: var(--bs-border-radius);
+  max-width: 100%;
+  max-height: 250px;
+  height: auto;
+}
