--- a/styles/scss/partials/_listing-card.scss
+++ b/styles/scss/partials/_listing-card.scss
@@ -18,21 +18,14 @@
   }
 
   &__image {
-    position: relative;
-    padding-top: 75%;
+    height: 300px;
     background: $color-bg-tertiary;
     overflow: hidden;
 
-    > * {
-      position: absolute;
-      top: 0;
-      left: 0;
+    img {
       width: 100%;
       height: 100%;
       object-fit: cover;
-    }
-
-    img {
       @include transition(transform $transition-base);
     }
   }
@@ -109,6 +102,7 @@
       border-radius: $border-radius-sm;
       font-size: $font-size-xs;
       font-weight: $font-weight-semibold;
+      z-index: 5;
 
       &--won {
         background-color: #28a745;
