--- a/styles/scss/partials/_listing-card.scss
+++ b/styles/scss/partials/_listing-card.scss
@@ -11,6 +11,8 @@
   @include transition(transform $transition-base, box-shadow $transition-base);
   height: 100%;
   width: 100%;
+  min-width: 0;
+  max-width: 100%;
 
   &:hover {
     transform: translateY(-2px);
@@ -18,7 +20,7 @@
   }
 
   &__image {
-    height: 300px;
+    height: 200px;
     background: $color-bg-tertiary;
     overflow: hidden;
 
@@ -144,6 +146,25 @@
       font-size: $font-size-sm;
       color: $color-text-secondary;
     }
+
+    &-info {
+      display: flex;
+      flex-direction: column;
+      gap: $spacing-xs;
+      width: 100%;
+    }
+
+    &-detail {
+      @include flex-start;
+      gap: $spacing-xs;
+      font-size: $font-size-sm;
+      color: $color-text-secondary;
+
+      i {
+        font-size: $font-size-base;
+        color: $color-text-muted;
+      }
+    }
   }
 
   &__wrapper {
@@ -201,4 +222,10 @@
 
 .profile-page__bid-card {
   position: relative;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  min-width: 0;
+  max-width: 100%;
 }
